Support dark mode. Fix #13

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,6 +28,7 @@ body {
 	font-size: 100%;
 	text-align: center;
 	line-height: 1;
+	background-color: #f2f2f2;
 	color: #333333;
 }
 
@@ -94,12 +95,14 @@ select {
 	padding: 0 10px;
 	margin: 0 3px 7px 3px;
 	border-radius:4px;
-	border: 1px solid #cccccc;
+	border: none;
 	outline: none;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
 	background-color: #f7f7f7;
+	font-weight: bold;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 input[type="search"] {
@@ -153,6 +156,7 @@ input[type="search"] {
 .btn {
 	border-radius: 4px;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+	background-color: #f2f2f2;
 }
 
 .btn-primary {
@@ -253,5 +257,36 @@ input[type="search"] {
 
 	.modal > div {
 		width: 45%;
+	}
+}
+
+/* DARK THEME */
+
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #485460;
+	}
+
+	#header {
+		background-color: #1e272e;
+	}
+
+	.modal-header {
+		background-color: #1e272e;
+		color: #ffffff;
+	}
+	
+	.modal-content {
+		border-bottom: 1px solid #1e272e;
+	}
+
+	.modal > div {
+		background-color: #485460;
+		color: #ffffff;
+	}
+
+	select {
+		background-color: #485460;
+		color: #ffffff;
 	}
 }
